src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>FF_and_E_As_Is__c</fullName>
        <inlineHelpText>This is the Furniture Fixtures and Equipment plus the Personal Property that is indicated as the &quot;As Is&quot; value in the appraisal.</inlineHelpText>
        <label>As-Is FF and E + Personal Property</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facility_Operator__c</fullName>
        <inlineHelpText>Who&apos;s under contract to operate the facility?</inlineHelpText>
        <label>Facility Operator</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Final_Program_Approval_Date__c</fullName>
        <description>Date Final Approval received from PACE Program</description>
        <inlineHelpText>Date Final Approval received from PACE Program</inlineHelpText>
        <label>PACE Program Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Crime__c</fullName>
        <inlineHelpText>This indicates whether the Property Owner has been convicted of a financial crime.</inlineHelpText>
        <label>Financial Crime</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financing_Amount__c</fullName>
        <description>Financing Amount associated with Opportunity</description>
        <label>Total PACE financing amount (Est.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financing_Execution__c</fullName>
        <inlineHelpText>Indicates what the execution strategy is.</inlineHelpText>
        <label>Financing Execution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Securitization</fullName>
                </value>
                <value>
                    <fullName>Private Placement</fullName>
                </value>
                <value>
                    <fullName>Muni Bond</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Mortgage_Lender_Contact_Email__c</fullName>
        <inlineHelpText>Lender&apos;s contact email</inlineHelpText>
        <label>Lender Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Mortgage_Lender_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lender&apos;s contact first and last name.</inlineHelpText>
        <label>Lender Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (First Mortgage Lender Contact Name)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Mortgage_Lender_Contact_Phone__c</fullName>
        <inlineHelpText>Lender&apos;s contact direct phone number.</inlineHelpText>
        <label>Lender Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>First_Mortgage__c</fullName>
        <inlineHelpText>Select yes if there is a mortgage lender. If no mortgage lender, leave the rest of this section blank.</inlineHelpText>
        <label>First Mortgage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flood_Category__c</fullName>
        <inlineHelpText>Information gathered from the Appraisal, Flood Cert or Accord Form</inlineHelpText>
        <label>Flood Category</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Flood_Insurance_Required__c</fullName>
        <inlineHelpText>Source Document from Appraisal/ Flood Cert/Accord Form</inlineHelpText>
        <label>Flood Insurance Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flood_Map_Panel__c</fullName>
        <inlineHelpText>The date of the Flood Map from the Appraisal or Flood Cert.</inlineHelpText>
        <label>Flood Map Panel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flood_Panel_Map_Number__c</fullName>
        <inlineHelpText>Flood Panel Map Number Information from Appraisal/ Flood Cert</inlineHelpText>
        <label>Flood Map Panel Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flood_Zone__c</fullName>
        <inlineHelpText>Information from Appraisal/ Flood Cert/Accord Form</inlineHelpText>
        <label>Flood Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forclosure_Short_Sale_or_Deed_in_Lieu__c</fullName>
        <inlineHelpText>This indicates whether the Property Owner had recently been the subject of a foreclosure, short sale, or deed in lieu.</inlineHelpText>
        <label>Foreclosure, Short Sale, or Deed in Lieu</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_Date__c</fullName>
        <inlineHelpText>The date the deal was funded. 

Most times the funding date is the same as the close date, except for purchased transactions when the close date is the purchase date and the funded date is the original funding date.</inlineHelpText>
        <label>Funding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_Source__c</fullName>
        <inlineHelpText>What is the funding source for this opportunity?</inlineHelpText>
        <label>Funding Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Corona</fullName>
                </value>
                <value>
                    <fullName>Petros</fullName>
                </value>
                <value>
                    <fullName>Ygrene</fullName>
                </value>
                <value>
                    <fullName>Blue Mountain Capital</fullName>
                </value>
                <value>
                    <fullName>Institutional</fullName>
                </value>
                <value>
                    <fullName>Transitional</fullName>
                </value>
                <value>
                    <fullName>SW</fullName>
                </value>
                <value>
                    <fullName>Large Loan</fullName>
                    <isActive>false</isActive>
                    <label>Large Loan</label>
                </value>
                <value>
                    <fullName>TBD</fullName>
                    <isActive>false</isActive>
                    <label>TBD</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funds_Remaining__c</fullName>
        <formula>Est_Improvement_Cost__c  -  Dispersment_Sum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Project Cost minus all dispersments to date.</inlineHelpText>
        <label>Funds Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>General_Contractor_Profile__c</fullName>
        <inlineHelpText>Summary of GC experience, with a link to their website.</inlineHelpText>
        <label>General Contractor Profile</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Google_Map__c</fullName>
        <description>A link to a Google satellite view of the property</description>
        <inlineHelpText>A link to a Google satellite view of the property</inlineHelpText>
        <label>Google Map</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Gross_Building_Area_sf__c</fullName>
        <inlineHelpText>This is the total area of the structures, regardless of whether the space is rentable by tenants (in square feet).</inlineHelpText>
        <label>Gross Building Area  - Sq Ft</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Land_Area_Acre_Foot__c</fullName>
        <inlineHelpText>This is the total size of the land comprising the Property (in acres).</inlineHelpText>
        <label>Gross Land Area  - Acre</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Land_Area_sq_ft__c</fullName>
        <inlineHelpText>This is the total size of the land comprising the Property (in square feet)..</inlineHelpText>
        <label>Gross Land Area - sq ft</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ground_Lease_Adj__c</fullName>
        <inlineHelpText>Apply 15 bps if ground lease in place. Value input from PACE Calculator.</inlineHelpText>
        <label>Ground Lease Spread Adj.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ground_Lease_Description__c</fullName>
        <label>Ground Lease Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ground_Lease_Option_Periods__c</fullName>
        <label># Ground Lease Option Periods</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ground_Lease_Type__c</fullName>
        <inlineHelpText>Source: Appraisal/ Ground Lease</inlineHelpText>
        <label>Ground Lease Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hazardous_Substances__c</fullName>
        <inlineHelpText>Are any Hazardous Substances used, treated, or stored on the Property?

Source doc is UW Questionnaire.</inlineHelpText>
        <label>Hazardous Substances</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_groundlease_expiration_date__c</fullName>
        <label>If ground lease, expiration date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incentive_Measures_Already_Applied__c</fullName>
        <inlineHelpText>Have you already applied to incentive programs for the measures for which you are requesting financing?</inlineHelpText>
        <label>Incentive Measures Already Applied?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incentive_Measures_Plan_to_Apply__c</fullName>
        <inlineHelpText>If you have not applied to incentive programs for these measures, do you plan to?</inlineHelpText>
        <label>Incentive Measures Plan to Apply?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Income_Approach_Cap_Rate_OAR__c</fullName>
        <inlineHelpText>This is the capitalization rate used to calculate the value of the Property under the &quot;Income Approach&quot;.</inlineHelpText>
        <label>Income Approach Cap Rate - OAR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Income_Approach_Value__c</fullName>
        <inlineHelpText>This is the value of the Property, based on the &quot;Income Approach&quot; methodology.</inlineHelpText>
        <label>Income Approach Value:</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_App_Date__c</fullName>
        <description>Date Initial App is received from Owner</description>
        <inlineHelpText>Date Initial App is received from Owner</inlineHelpText>
        <label>Initial App Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Entry_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Date project identified. Please note this may be earlier than entry into CleanFund&apos;s pipeline portal.</description>
        <inlineHelpText>Date project identified. Please note this may be earlier than entry into CleanFund&apos;s pipeline portal.</inlineHelpText>
        <label>Project Identified Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurance_Coverage_Level__c</fullName>
        <inlineHelpText>Source from Accord Form</inlineHelpText>
        <label>Insurance Coverage Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Intangible_Assets_of_Owner_Occupant__c</fullName>
        <inlineHelpText>Assets that are not physical in nature. Patents, trademarks, copyrights, business methodologies, goodwill and brand recognition are all intangible assets.</inlineHelpText>
        <label>Intangible Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interest_Rate_1st__c</fullName>
        <inlineHelpText>The current interest rate, as taken from the most recent mortgage servicer&apos;s statement.</inlineHelpText>
        <label>Interest Rate (1st)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Interest_Rate_2nd__c</fullName>
        <inlineHelpText>The current interest rate, as taken from the most recent mortgage servicer&apos;s statement</inlineHelpText>
        <label>Interest Rate (2nd)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Interest_Rate_Based_On__c</fullName>
        <inlineHelpText>The interest rate is calculated based on which Benchmark</inlineHelpText>
        <label>Interest Rate Based On</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Benchmark at Term Sheet</fullName>
                </value>
                <value>
                    <fullName>Benchmark at LOI</fullName>
                </value>
                <value>
                    <fullName>Benchmark at Commit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Rate_Floor__c</fullName>
        <inlineHelpText>The lowest the interest rate will go given the movement of the current benchmark.</inlineHelpText>
        <label>Interest Rate Floor</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <description>Estimated loan coupon (not final)</description>
        <label>Interest Rate</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Involuntary_Liens_Date__c</fullName>
        <label>Involuntary Liens Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Involuntary_Liens_Notes__c</fullName>
        <label>Involuntary Liens Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Involuntary_Liens__c</fullName>
        <inlineHelpText>Are any involuntary liens recorded against the Property (e.g., mechanics lien, tax liens, or judgments)?</inlineHelpText>
        <label>Involuntary Liens</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Capitalized_Interest_Financed__c</fullName>
        <description>Will capitalized interest be included in the financing amount or not?</description>
        <inlineHelpText>Will capitalized interest be included in the financing amount or not?</inlineHelpText>
        <label>Is Capitalized Interest Financed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Project_a_Reimbursement__c</fullName>
        <inlineHelpText>Is this project a reimbursement or new installation/construction.</inlineHelpText>
        <label>Is Project a Reimbursement?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_there_a_groundlease_in_place__c</fullName>
        <label>Is there a ground lease in place?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_there_a_lender__c</fullName>
        <inlineHelpText>This is to identify existing lender on the property.</inlineHelpText>
        <label>Is there a lender?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Kick_off_call_date__c</fullName>
        <inlineHelpText>The date the kick off call was held with the Owner.</inlineHelpText>
        <label>Kick Off Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LID__Is_Influenced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Opportunity was influenced by activities on LinkedIn Sales Navigator</description>
        <label>Is_Influenced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOI_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The person who approves this LOI</inlineHelpText>
        <label>LOI Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LOI_Condition_1__c</fullName>
        <inlineHelpText>These conditions will be pulled through the Conga document into the LOI</inlineHelpText>
        <label>LOI Condition 1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LOI_Condition_2__c</fullName>
        <inlineHelpText>If applicable this is the 2nd LOI condition which will be pulled through to the LOI document via Conga.</inlineHelpText>
        <label>LOI Condition 2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LOI_Executed_Date__c</fullName>
        <description>Date LOI is executed by Owner</description>
        <inlineHelpText>Date Final LOI is executed by Owner. Should not be filled in for draft LOIs</inlineHelpText>
        <label>LOI Executed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LOI_Sent_Date__c</fullName>
        <description>Date LOI is sent to Owner</description>
        <inlineHelpText>Date LOI is sent to Owner</inlineHelpText>
        <label>LOI Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LOI_Signer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The person who will sign the LOI.</inlineHelpText>
        <label>LOI Signer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LOI_Start_Date__c</fullName>
        <label>LOI Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LOS_to_LOI_Date__c</fullName>
        <label>LOS to LOI</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LOS_to_LOI__c</fullName>
        <inlineHelpText>The point at which a deal realistically begins heading toward LOI, not when it comes in, or when we put out a term sheet.  This is at the BDR&apos;s discretion.</inlineHelpText>
        <label>LOS to LOI OLD</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Month</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Land_Value__c</fullName>
        <inlineHelpText>Land Value as documented by the assessment.</inlineHelpText>
        <label>Assessed Land Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LastUpdateChildRecord_Date__c</fullName>
        <label>Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Appraisal_Date__c</fullName>
        <description>Date property was last appraised</description>
        <inlineHelpText>Date of Value for CF Value. Could be the last appraisal date or could be when the Initial App was submitted.</inlineHelpText>
        <label>CF Value Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Lender_Consent_Date__c</fullName>
        <inlineHelpText>This is the last lender consent date for all liens on this opportunity.</inlineHelpText>
        <label>Last Lender Consent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Stage_Change_Date__c</fullName>
        <label>Last Stage Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Law_and_Ordinance_Insurance_in_place__c</fullName>
        <inlineHelpText>Source from Appraisal/ Flood Cert/Accord Form</inlineHelpText>
        <label>Law and Ordinance Insurance in place</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadStage__c</fullName>
        <label>Lead Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Identified</fullName>
                </value>
                <value>
                    <fullName>Pre-Qualified Lead</fullName>
                </value>
                <value>
                    <fullName>Qualified Lead</fullName>
                </value>
                <value>
                    <fullName>Term Sheet Sent</fullName>
                </value>
                <value>
                    <fullName>Initial App</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>Committed</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Securitized</fullName>
                </value>
                <value>
                    <fullName>Nurture</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Conversion_Type__c</fullName>
        <inlineHelpText>The stage that was set when a lead was converted to an opportunity.</inlineHelpText>
        <label>Lead Conversion Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Up_Commencement__c</fullName>
        <inlineHelpText>The estimated date that owner anticipates to begin the lease-up process</inlineHelpText>
        <label>Lease-Up Commencement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Fee__c</fullName>
        <inlineHelpText>CleanFund’s Legal Review/Opinion per program that the property owner will be paying per project.</inlineHelpText>
        <label>Legal Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Legal_Name_of_Property_Owner__c</fullName>
        <description>Legal name of the property owner entity, which holds title at the property.</description>
        <inlineHelpText>Full legal name of the entity which holds title to the property, as listed with the entity formation documents filed with the Secretary of State. (If different from account name)</inlineHelpText>
        <label>Legal Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lender_Ack_Start_Date__c</fullName>
        <inlineHelpText>The date the lender consent package was sent to the lender.</inlineHelpText>
        <label>Lender Ack. Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lender_Ack_Status__c</fullName>
        <inlineHelpText>This will look at the list of liens and compute the status.   Liens that have the placeholder field will not be considered.
0 - Liens  N/A
No Liens Acknowledged - Not Started
Some Liens Acknowledged - In Progress
All Liens Acknowledged - Completed</inlineHelpText>
        <label>Lender Ack. Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None Received</fullName>
                </value>
                <value>
                    <fullName>Some Received</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lender_Acknowledgment__c</fullName>
        <inlineHelpText>This is the last date that lender acknowledgement was received for all liens outlined in the lien table.</inlineHelpText>
        <label>Lender Acknowledgment</label>
        <summarizedField>Lien__c.Lender_Acknowledgement__c</summarizedField>
        <summaryForeignKey>Lien__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lender_Consent_Date_2nd__c</fullName>
        <inlineHelpText>If there is a second mortgage the date that the lender acknowledgement was obtained.</inlineHelpText>
        <label>Lender Ack. Date (2nd)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Litigation_Date__c</fullName>
        <label>Litigation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Litigation_Notes__c</fullName>
        <label>Litigation Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Litigation__c</fullName>
        <inlineHelpText>This indicates whether the Property Owner is currently the subject of litigation.</inlineHelpText>
        <label>Litigation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Only</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Number_2nd__c</fullName>
        <label>Loan Number (2nd)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Number__c</fullName>
        <inlineHelpText>This is the Loan Number of the 1st Mortgage</inlineHelpText>
        <label>Loan Number (1st)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Serviced__c</fullName>
        <inlineHelpText>Does this loan have a loan servicer</inlineHelpText>
        <label>Loan Serviced</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Servicer_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the loan servicer company</inlineHelpText>
        <label>Loan Servicer Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Loan Servicer Company)</relationshipLabel>
        <relationshipName>Opportunities6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Servicer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Loan Servicer contact</inlineHelpText>
        <label>Loan Servicer Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Loan_Servicer_Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Loan Servicer)</relationshipLabel>
        <relationshipName>Opportunities7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Term__c</fullName>
        <description>Estimated loan term (not final)</description>
        <inlineHelpText>Desired length of financing term, expressed in years</inlineHelpText>
        <label>Financing Term</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MSA_Metropolitan_Statistical_Area__c</fullName>
        <inlineHelpText>This is the technical definition of the region where the Property is located.</inlineHelpText>
        <label>MSA - Metropolitan Statistical Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Memo_Project_Summary__c</fullName>
        <inlineHelpText>The Project Summary specific to a Credit Memo that&apos;s being submitted for approval</inlineHelpText>
        <label>Memo Project Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Mortgage_Debt_Service__c</fullName>
        <inlineHelpText>This is the sum of all mortgage annual payments.</inlineHelpText>
        <label>Mortgage Debt Service</label>
        <summarizedField>Lien__c.Annual_Debt_Service__c</summarizedField>
        <summaryForeignKey>Lien__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Mortgage_Delinquencies_Date__c</fullName>
        <label>Mortgage Delinquencies Date</label>
        <type>Date</type>
    </fields>
</CustomObject>